[gd_scene load_steps=5 format=2]

[ext_resource path="res://mainGame/Operacao.gd" type="Script" id=1]
[ext_resource path="res://assets/imgs/mais.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5, 25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.5, 25 )

[node name="Operacao" type="Node2D"]
script = ExtResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -27.5, -25 )
normal = ExtResource( 2 )
shape = SubResource( 1 )

[node name="AreaOperacao" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOperacao"]
shape = SubResource( 2 )
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="area_entered" from="AreaOperacao" to="." method="_on_AreaOperacao_area_entered"]
[connection signal="area_exited" from="AreaOperacao" to="." method="_on_AreaOperacao_area_exited"]
